Colaboratory를 통해 생성됨

--- a/자릿수_더하기.ipynb
+++ b/자릿수_더하기.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "자릿수 더하기.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPdxwqnTZyAZlNm66opRInR",
+      "authorship_tag": "ABX9TyPYADwW/rtOk4Ek9mI8W6AL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,9 +31,9 @@
       "cell_type": "markdown",
       "source": [
         "## 문제 설명\n",
-        "- 자연수 N이 주어지면, N의 각 자릿수의 합을 구해서 return 하는 solution 함수를 만들어 주세요.\n",
+        "- 함수 solution은 정수 n을 매개변수로 입력받습니다. n의 각 자릿수를 큰것부터 작은 순으로 정렬한 새로운 정수를 리턴해주세요. \n",
         "<br>\n",
-        "예를들어 N = 123이면 1 + 2 + 3 = 6을 return 하면 됩니다."
+        "예를들어 n이 118372면 873211을 리턴하면 됩니다."
       ],
       "metadata": {
         "id": "PVhD1S_ahzyF"
@@ -49,11 +49,26 @@
       "source": [
         "#내 코드\n",
         "def solution(n):\n",
-        "    num=0\n",
+        "    result=[]\n",
         "    for i in str(n):\n",
-        "        num+=int(i)\n",
-        "    return num"
+        "        result.append(i)\n",
+        "    return int(\"\".join(sorted(result,reverse=True)))"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#다른사람 코드\n",
+        "def solution(n):\n",
+        "    ls = list(str(n))\n",
+        "    ls.sort(reverse = True)\n",
+        "    return int(\"\".join(ls))"
+      ],
+      "metadata": {
+        "id": "xxQB5L92iMR7"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
